Arreglo consultas Controladores